--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,21 @@
-html, body {
-    background-color: #1d3557;
+html,
+body {
+  background-color: #1d3557;
 }
+
 
 .App {
   background-color: #1d3557;
 }
 
+.mainview {
+  background-color: #1d3557;
+}
 
 h1 {
   color: #ffff;
 }
 
 .sortButtons Button {
-    margin: 4px;
+  margin: 4px;
 }
